<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="-133dp">

        <TextView
            android:id="@+id/question1TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/question_1_what_is_kotlin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question1TextView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/a_programming_language"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/a_fruit"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/a_planet"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/a_car_brand"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_margin="16dp"
            android:text="@string/question_2_which_are_kotlin_keywords"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question2TextView"
            android:padding="8dp"
            android:text="@string/val"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox1"
            android:padding="8dp"
            android:text="@string/fun"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox2"
            android:padding="8dp"
            android:text="@string/apple"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:padding="8dp"
            android:text="if"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox4"
            android:layout_margin="16dp"
            android:layout_marginTop="164dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submitButton"
            android:layout_margin="16dp"
            android:layout_marginTop="183dp"
            android:layout_marginBottom="16dp"
            android:text="@string/reset" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>